# Evision

./: .gitignore  README.md  SkyEyes.sln  build_on_windows.md
src/: CMakeLists.txt  CMakeSettings.json  CvLab.sln  Evision.pro  Evision.sln
src/CustomGraphicsView/: CustomGraphicsView.cpp  CustomGraphicsView.h  CustomGraphicsView.vcxproj  CustomGraphicsView.vcxproj.filters  CustomGraphicsViewPlugin.cpp  CustomGraphicsViewPlugin.h  QtPlugin_Release_x64.props  QtPlugin_user_x64.props
src/CvLabMain/: CvLabMain.csproj
src/CvLabSandbox/: CvLabSandbox.csproj  Program.cs  packages.config
src/Evision/: CalibrateController.cpp  CalibrateController.h  CalibrateParamEntity.cpp  CalibrateParamEntity.h  Calibrater.cpp  Calibrater.h  Calibrater.ui  CalibraterView.cpp  CalibraterView.h  CalibraterView.ui  Camera.cpp  Camera.h  Camera.ui  CameraView.cpp  CameraView.h  CreateCameraParamFile.cpp  CreateCameraParamFile.ui  Evision.cpp  Evision.qrc  Evision.rc  Evision.ui  Evision.vcxproj  Evision.vcxproj.filters  EvisionController.cpp  EvisionController.h  EvisionParamEntity.cpp  EvisionParamEntity.h  EvisionRectify.ui  EvisionRectifyView.cpp  EvisionRectifyView.h  EvisionUtils.cpp  EvisionUtils.h  EvisionView.cpp  EvisionView.h  LogView.cpp  LogView.h  LogView.ui  Matcher.cpp  Matcher.h  Matcher.ui  (+57 more)
src/Evision3dViz/: CMakeLists.txt  Evision3dViz.cpp  Evision3dViz.h  Evision3dViz.qrc  Evision3dViz.vcxproj  Evision3dViz.vcxproj.filters  Evision3dVizFactory.cpp  evision3dviz_global.h
src/EvisionADCensus/: CMakeLists.txt  EvisionADCensus.cpp  EvisionADCensus.vcxproj  EvisionADCensus.vcxproj.filters  adcensuscv.cpp  adcensuscv.h  aggregation.cpp  aggregation.h  common.h  disparityrefinement.cpp  disparityrefinement.h  imageprocessor.cpp  imageprocessor.h  libapi.h  main.cpp  scanlineoptimization.cpp  scanlineoptimization.h  stereoprocessor.cpp  stereoprocessor.h
src/EvisionCalibrate/: CMakeLists.txt  CalibrateController.cpp  CalibrateController.h  CalibrateParamEntity.cpp  CalibrateParamEntity.h  CalibraterView.cpp  CalibraterView.h  CalibraterView.ui  EvisionCalibrateFactory.cpp  StereoCalibrate.cpp  StereoCalibrate.h
src/EvisionCamera/: CMakeLists.txt  Camera.ui  CameraView.cpp  CameraView.h  CameraView.ui  EvisionCameraFactory.cpp  StereoCameraView.cpp  StereoCameraView.h  StereoCameraView.ui
src/EvisionCloudViewer/: CMakeLists.txt  CloudAnalyzer.cpp  CloudAnalyzer.h  CloudGLWidget.cpp  CloudGLWidget.h  EvisionCloudViewer.vcxproj  EvisionCloudViewer.vcxproj.filters  EvisionCloudViewerFactory.cpp
src/EvisionDisparity/: CMakeLists.txt  EvisionDisparityFactory.cpp  StereoMatch.cpp  StereoMatch.h  StereoMatchController.cpp  StereoMatchParamEntity.cpp  StereoMatchParamEntity.h  StereoMatchView.cpp  StereoMatchView.h  StereoMatchView.ui
src/EvisionElas/: CMakeLists.txt  EvisionElas.cpp  EvisionElas.h  EvisionElas.vcxproj  EvisionElas.vcxproj.filters  StereoEfficientLargeScale.cpp  StereoEfficientLargeScale.h  descriptor.h  elas.cpp  elas.h  filter.h  image.h  libapi.h  matrix.cpp  matrix.h  timer.h  triangle.cpp  triangle.h
src/EvisionLegacy/: CvvImage.cpp  Evision.rc  EvisionLegacy.cpp  EvisionLegacy.h  EvisionLegacy.reg  EvisionLegacy.vcxproj  EvisionLegacy.vcxproj.filters  EvisionLegacyDoc.cpp  EvisionLegacyDoc.h  EvisionLegacyView.cpp  EvisionLegacyView.h  MainFrm.cpp  MainFrm.h  NewProject.cpp  OutputWnd.cpp  Para1.cpp  Para2.cpp  Para3.cpp  Para4.cpp  PointCloudAnalyzer.h  ReadMe.txt  Release.props  StereoMatch.cpp  StereoMatch.h  calib.cpp  calib.h  resource.h  stdafx.cpp
src/EvisionMonocularCalib/: CMakeLists.txt  EvisionMonocularCalibFactory.cpp  MonocularCalibrate.cpp  MonocularCalibrate.h  MonocularCalibrateController.cpp  MonocularCalibrateController.h  MonocularCalibrateParamEntity.cpp  MonocularCalibrateParamEntity.h  MonocularCalibraterView.cpp  MonocularCalibraterView.h  MonocularCalibraterView.ui
src/EvisionObjDetection/: CMakeLists.txt  EvisionObjDetection.vcxproj  EvisionObjDetection.vcxproj.filters  EvisionObjDetectionFactory.cpp  ObjectDetectionEngine.cpp  ObjectDetectionEngine.h  ObjectDetectionEntity.cpp  ObjectDetectionEntity.h  ObjectDetectionView.cpp  ObjectDetectionView.h  ObjectDetectionView.ui  User_Debug_x64.props  User_Release_x64.props  activation_layer.h  activations.h  avgpool_layer.h  darknet.c  data.c  data.h  getopt.h  gettimeofday.c  gettimeofday.h  image.c  writing.c
src/EvisionObjDetectionEngine/: CMakeLists.txt  detector.c  list.txt
src/EvisionParamBridge/: CMakeLists.txt  CreateCameraParamFile.cpp  CreateCameraParamFile.ui  EvisionParamBridgeFactory.cpp
src/EvisionPnP/: CMakeLists.txt  EvisionPnPExport.h  Mesh.h  Model.h  ModelRegistration.h  PnPProblem.h  RobustMatcher.h  Utils.cpp  Utils.h
src/EvisionPolyTracker/: CMakeLists.txt  CreateCubePoly.cpp  CreateCubePoly.h  CreateCubePoly.ui  EvisionPolyTracker.cpp  EvisionPolyTracker.h  EvisionPolyTracker.qrc  EvisionPolyTracker.ui  EvisionPolyTrackerFactory.cpp  FeatureDetection.cpp  FeatureDetection.h  FeatureDetection.ui  TextureTrackingParams.cpp  TextureTrackingParams.h  TextureTrackingParams.ui  TrackerGLWidget.cpp  TrackerGLWidget.h  logo.h
src/EvisionSandbox/: CMakeLists.txt  CalibrateController.cpp  CalibrateController.h  CalibrateParamEntity.cpp  CalibrateParamEntity.h  CalibraterView.h  Camera.ui  CameraView.cpp  CameraView.ui  CreateCameraParamFile.cpp  CreateCameraParamFile.h  Evision.qrc  Evision.rc  Evision.ui  EvisionController.cpp  EvisionController.h  EvisionParamEntity.cpp  EvisionParamEntity.h  EvisionRectifyView.cpp  EvisionSandbox.vcxproj  EvisionSandbox.vcxproj.filters  EvisionUtils.cpp  EvisionUtils.h  EvisionView.cpp  EvisionView.h  LogView.cpp  LogView.h  LogView.ui  MatcherView.cpp  MatcherView.h  MatcherView.ui  ObjectDetectionEngine.cpp  ObjectDetectionEngine.h  ObjectDetectionEntity.cpp  ObjectDetectionEntity.h  ObjectDetectionView.cpp  ObjectDetectionView.h  StdoutRedirector.cpp  StdoutRedirector.h  StereoCalibrate.cpp  (+22 more)
src/EvisionTrace/: CMakeLists.txt  EvisionTraceFactory.cpp  TraceView.cpp
src/EvisionUndistortion/: CMakeLists.txt  rectify.h  (+2 more)
(+543 files in other folders)
